load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# this lib is used by bazel-distribution.
http_archive(
    name = "bazel_skylib",
    sha256 = "c6966ec828da198c5d9adbaa94c05e3a1c7f21bd012a0b29ba8ddbccb2c93b0d",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
    ],
)

http_archive(
    name = "rules_python",
    sha256 = "84aec9e21cc56fbc7f1335035a71c850d1b9b5cc6ff497306f84cced9a769841",
    strip_prefix = "rules_python-0.23.1",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.23.1/rules_python-0.23.1.tar.gz",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python39",
    # Available versions are listed in @rules_python//python:versions.bzl.
    # We recommend using the same version your team is already standardized on.
    python_version = "3.9",
    register_coverage_tool = True,
)

load("@python39//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

# Create a central repo that knows about the dependencies needed from
# requirements_lock.txt.
pip_parse(
    name = "pip",
    isolated = False,
    python_interpreter_target = interpreter,
    requirements_lock = "//:requirements_lock.txt",
)

# Load the starlark macro which will define your dependencies.
load("@pip//:requirements.bzl", "install_deps")

# Call it to define repos for your requirements.
install_deps()

# See: https://github.com/bazelbuild/rules_python/issues/497
load("@rules_python//python/pip_install:repositories.bzl", "pip_install_dependencies")

pip_install_dependencies()

http_archive(
    name = "confluent_rules",
    auth_patterns = {
        "github.com": "Bearer <password>",
    },
    sha256 = "d78210b5407d297f1563b5121de6f8be031e750c04819e358d5c208cc4a45bbf",
    strip_prefix = "confluent-bazel-rules-0.0.33",
    url = "https://github.com/confluentinc/confluent-bazel-rules/archive/refs/tags/0.0.33.tar.gz",
)

load("@confluent_rules//python:deps.bzl", _confluent_rules_python_deps = "python_deps")

_confluent_rules_python_deps(interpreter)

load("@confluent_rules_pip//:requirements.bzl", _confluent_rules_pip_install_deps = "install_deps")

_confluent_rules_pip_install_deps()